--- a/src/main/resources/templates/profile.mustache
+++ b/src/main/resources/templates/profile.mustache
@@ -228,6 +228,71 @@
                         </div>
                          <!--댓글 단 탭-->
                         <div class="tab-pane fade" id="pills-mentions" role="tabpanel" aria-labelledby="pills-mentions-tab">
+                            <div class="ms-1">
+                                <!-- Feeds -->
+                                <div class="feeds">
+                                    <!-- Feed Item -->
+                                    {{#myCommentPostList}}
+                                        <div class="bg-white p-3 feed-item rounded-4 mb-3 shadow-sm">
+                                            <div class="d-flex">
+                                                <input type="hidden" id="postId" value="{{id}}">
+                                                <img id="userProfileUrl" src="{{user.imageUrl}}" class="img-fluid rounded-circle user-img" alt="profile-img">
+                                                <div class="d-flex ms-3 align-items-start w-100">
+                                                    <div class="w-100">
+                                                        <div class="d-flex align-items-center justify-content-between">
+                                                            <a href="/profile/{{user.id}}" class="text-decoration-none d-flex align-items-center">
+                                                                <h6 id="userName" class="fw-bold mb-0 text-body">{{User.name}}</h6>
+                                                                <span class="ms-2 material-icons bg-primary p-0 md-16 fw-bold text-white rounded-circle ov-icon">done</span>
+                                                                <small id="userNickname"class="text-muted ms-2">@{{user.nickname}}</small>
+                                                            </a>
+                                                            <div class="d-flex align-items-center small">
+                                                                <p class="text-muted mb-0">{{createdAt}}</p>
+                                                                <div class="dropdown">
+                                                                    <a href="#" class="text-muted text-decoration-none material-icons ms-2 md-20 rounded-circle bg-light p-1" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">more_vert</a>
+                                                                    <ul class="dropdown-menu fs-13 dropdown-menu-end" aria-labelledby="dropdownMenuButton1">
+                                                                        <li><a class="dropdown-item text-muted" href="#"><span class="material-icons md-13 me-1">edit</span>Edit</a></li>
+                                                                        <li><a class="dropdown-item text-muted" href="#"><span class="material-icons md-13 me-1">delete</span>Delete</a></li>
+                                                                        <li><a class="dropdown-item text-muted" href="#"><span class="material-icons md-13 me-1 ltsp-n5">arrow_back_ios arrow_forward_ios</span>Embed Vogel</a></li>
+                                                                        <li><a class="dropdown-item text-muted d-flex align-items-center" href="#"><span class="material-icons md-13 me-1">share</span>Share via another apps</a></li>
+                                                                    </ul>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                        <div class="my-2">
+                                                            <p class="text-dark">{{content}}</p>
+                                                            <div id="postImages" href="#" class="text-decoration-none" data-bs-toggle="modal" data-bs-target="#imageModal">
+                                                                {{#postImageList}}
+                                                                    <img id="image" src="{{.}}" class="img-fluid rounded mb-3" alt="post-img">
+                                                                {{/postImageList}}
+                                                            </div>
+                                                            <div class="d-flex align-items-center justify-content-between mb-2">
+                                                                <div id="likeButton">
+                                                                <span class="text-muted text-decoration-none d-flex align-items-start fw-light">
+                                                                    <span class="material-icons md-20 me-2">thumb_up_off_alt</span>
+                                                                    <span id="postLikeNum">{{likeNum}}</span>
+                                                                </span>
+                                                                </div>
+                                                                <div>
+                                                                    <span data-bs-toggle="modal" data-bs-target="#commentModal" id="commentButton" class="text-muted text-decoration-none d-flex align-items-start fw-light"><span class="material-icons md-20 me-2">chat_bubble_outline</span><span>{{commentNum}}</span></span>
+                                                                </div>
+                                                                <div>
+                                                                <span class="text-muted text-decoration-none d-flex align-items-start fw-light">
+                                                                    <span class="material-icons md-20 me-2">repeat</span>
+                                                                    <span id="postShareNum">{{shareNum}}</span>
+                                                                </span>
+                                                                </div>
+                                                                <div>
+                                                                    <span class="text-muted text-decoration-none d-flex align-items-start fw-light"><span class="material-icons md-18 me-2">share</span><span>Share</span></span>
+                                                                </div>
+                                                            </div>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    {{/myCommentPostList}}
+                                </div>
+                            </div>
                         </div>
                      </div>
                   </div>
