--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -202,7 +202,7 @@
                                 <a href="/" class="nav-link active"><span class="material-icons me-3">house</span> <span>Feed</span></a>
                             </li>
                             <li class="nav-item">
-                                <a href="profile" class="nav-link"><span class="material-icons me-3">account_circle</span> <span>Profile</span></a>
+                                <a href="/profile" class="nav-link"><span class="material-icons me-3">account_circle</span> <span>Profile</span></a>
                             </li>
                             <li class="nav-item">
                                 <a href="/" class="nav-link"><span class="material-icons me-3">logout</span> <span>Logout</span></a>
@@ -229,7 +229,7 @@
                                 <a href="/" class="nav-link active"><span class="material-icons me-3">house</span> <span>Feed</span></a>
                             </li>
                             <li class="nav-item">
-                                <a href="/profile" class="nav-link" id="profile-menu"><span class="material-icons me-3">account_circle</span> <span>Profile</span></a>
+                                <a class="nav-link" id="profile-menu"><span class="material-icons me-3">account_circle</span> <span>Profile</span></a>
                             </li>
                             <li class="nav-item">
                                 <a href="/trending" class="nav-link"><span class="material-icons me-3">local_fire_department</span> <span>Trending</span></a>
